<resources>
    <string name="app_name">Emissary</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit_account">Edit Account</string>
    <string name="action_done">Done</string>

    <!-- Activity Titles-->
    <string name="title_activity_create_delivery">List a new delivery</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Contact Us Page -->
    <string name="emissary_email">EmissaryApp@gmail.com</string>
    <string name="contact_us_urgent_title">Urgent Requests</string>
    <string name="contact_us_urgent_insr">What listing does this request reference?</string>
    <string name="about_us">If you have any problems, suggestions, or comments feel free to
        contact us on our email address below. For more urgent enquiries regarding a specific listing
        fill out the form below and we will sort out the issue ASAP. Thanks for your support!
    </string>
    <string name="urgent_message_dialog_mesage">Please note this is not for bug / feature reports. By submitting this request you acknowledge we may contact
    you via your mobile number in order to resolve this request.</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm Password</string>
    <string name="prompt_phone">Phone</string>

    <string name="reset_email_dialog_title">Enter your email to reset your password</string>

    <string name="action_sign_in">Sign in</string>
    <string name="action_signup">Sign up</string>
    <string name="action_logout">Sign out</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_password_mismatch">Passwords do not match</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>


    <!-- Accepting and taking down a listing button and dialogs-->
    <string name="listing_remove">Take down this listing</string>
    <string name="listing_deliver_item_button">Deliver this item!</string>
    <string name="confirm_dialog">You will be responsible for the safe delivery of the listed item
    according to our guildlines.</string>
    <string name="cancel_dialog">Are you sure?</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!-- Item status as view by the ORIGINAL LISTER -->
    <string name="status_listed">Item listed publicly. Waiting for driver acceptance...</string>
    <string name="status_accepted">A driver has accepted your delivery!</string>
    <string name="status_picked_up">The driver has picked up your item.</string>

    <string name="status_delivered_no_fb">Your item has successfully been delivered. Please place your feedback for the delivery.</string>
    <string name="status_delivered_d_fb">The delivery has completed successfully! Your feedback has been placed.</string>
    <string name="status_delivered_l_fb">Your item has successfully been delivered. Please place your feedback for the delivery.</string>

    <string name="status_complete">The delivery has completed successfully! Your feedback has been placed.</string>
    <string name="status_unknown">Status unknown at this time.</string>

    <!-- Item status as view by the DELIVERY DRIVER -->
    <string name="status_listed_driver">This item has no driver associated with it. Accept this listing from the home page again to claim it.</string>
    <string name="status_accepted_driver">You have accepted this delivery. Mark item as picked up when you have picked up the item.</string>
    <string name="status_picked_up_driver">You have picked up the item. Mark this item as delivered when you have completed the delivery</string>

    <string name="status_delivered_no_fb_driver">You have completed the delivery successfully! Please place feedback for the lister.</string>
    <string name="status_delivered_d_fb_driver">You have completed the delivery successfully! Please place feedback for the lister.</string>
    <string name="status_delivered_l_fb_driver">This delivery is complete! Your feedback has been placed</string>

    <string name="status_complete_driver">This delivery is complete! Your feedback has been placed!</string>

    <string name="status_unknown_driver">Status unknown at this time.</string>

    <!-- Update the status button on the drivers view of item -->
    <string name="driver_button_picked_up">Mark as picked up</string>
    <string name="driver_button_complete">Delivery Complete</string>
    <string name="driver_button_unknown">Status Unknown</string>


    <string name="update_status_dialog_title">Update delivery status</string>
    <string name="abandon_delivery_dialog_title">Abandon this delivery</string>
    <string name="abandon_delivery_dialog_message">Are you sure you want to discontinue as driver for this delivery?</string>
    <string name="dialog_place_feedback_for_driver_title">Place feedback for this delivery</string>
    <string name="driver_update_confirm">The new status will become: </string>

    <string name="change_password_dialog_title">Change your password</string>
</resources>
